--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Utopiamud by Rottenwood</title>
+    <title>Утопия by Rottenwood</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Utopiamud</h1>
-        <h2>PHP based MUD engine</h2>
+        <h1>Утопия</h1>
+        <h2>Современный веб-движок для MUD</h2>
         <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -28,37 +28,83 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a name="%D0%A3%D1%82%D0%BE%D0%BF%D0%B8%D1%8F-" class="anchor" href="#%D0%A3%D1%82%D0%BE%D0%BF%D0%B8%D1%8F-"><span class="octicon octicon-link"></span></a>Утопия <img src="http://img.shields.io/badge/%D0%A2%D0%B5%D0%BA%D1%83%D1%89%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F%20UtopiaMud-%20v0.1.0%20-brightgreen.svg" alt="Текущая версия">
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h2>
+<a name="%D0%A1%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9-%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B2%D0%B8%D0%B6%D0%BE%D0%BA-%D0%B4%D0%BB%D1%8F-mud" class="anchor" href="#%D0%A1%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9-%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B2%D0%B8%D0%B6%D0%BE%D0%BA-%D0%B4%D0%BB%D1%8F-mud"><span class="octicon octicon-link"></span></a>Современный веб-движок для MUD</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h4>
+<a name="%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud" class="anchor" href="#%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud"><span class="octicon octicon-link"></span></a>Рабочая версия муда: <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
+</h4>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Аналитика: <a href="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827"><img src="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827/mini.png" alt="SensioLabsInsight"></a> <a href="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/?branch=master"><img src="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/badges/quality-score.png?b=master" alt="Scrutinizer Code Quality"></a></p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><a href="https://github.com/Rottenwood/UtopiaMud/issues?labels=%D0%9E%D0%B1%D1%81%D1%83%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%0A%D0%B5&amp;page=1&amp;state=open">Форум</a>
+| <a href="https://github.com/Rottenwood/UtopiaMud/wiki">Wiki</a>
+| <a href="https://cloud.mail.ru/public/47c25a67bed8/gurps-rules-lite.pdf">Легкая версия ролевых правил GURPS</a>
+| <a href="https://github.com/Rottenwood/UtopiaMud/blob/master/FUTURE.md">Планы на будущее</a>
+| <a href="https://github.com/Rottenwood/UtopiaMud/blob/master/CHANGELOG.md">История версий</a></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<blockquote>
+<p>MUD (Multi User Dungeon) — текстовая многопользовательская компьютерная игра, в которой присутствуют элементы ролевой игры, приключений, боевой системы и обязательно чат, как правило разделённый на каналы. Традиционно для передачи сообщений используется протокол telnet.</p>
+</blockquote>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><strong>Утопия</strong>, в свою очередь, являются программным решением на языке PHP для создания муд-миров. Основной упор делается на простоту настройки. Легкая установка позволит любому желающему начать создавать свое виртуальное пространство, в то время как система интеграции позволит объединять пользовательские миры в единую вселенную.</p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a name="%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F"><span class="octicon octicon-link"></span></a>Документация</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><a href="https://github.com/Rottenwood/UtopiaMud/wiki/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0">Описание процесса установки</a></p>
+
+<h3>
+<a name="%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8" class="anchor" href="#%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8"><span class="octicon octicon-link"></span></a>Особенности</h3>
+
+<ul>
+<li>Игра происходит через браузер, а не через telnet-клиент.</li>
+<li>Все настройки игры, параметры, заклинания, локации и предметы хранятся в удобных для редактирования текстовых файлах, откуда могут быть легко импортированы в базу данных.</li>
+<li>Удобный внутриигровой редактор зон, предметов, монстров. Возможность загрузки зон с удаленных хостов.</li>
+<li>Игроки мудов на движке Utopia будут иметь возможность перемещаться из одного сервера в другой, без необходимости повторной регистрации.</li>
+<li>Перемещение персонажей происходит не только в трехмерном пространстве, но и между слоями мира. Не находя брода через бурную реку, существо может переместиться на соседний слой пространства, где вместо реки увидит лишь неглубокий ручей.</li>
+<li>Неоднородность мира приводит к тому, что персонаж может оказаться как в средневековье, так и на борту космического аппарата. При этом система мирового баланса не даст возможности, например, эффективно использовать лучевые бластеры и двуручную кувалду. В мире магии не будет работать двигатель внутреннего сгорания, а в современном мегаполисе магия останется уделом фокусников.</li>
+<li>Для расчета умений используется система перков и очков характеристик. Нет необходимости перекидывать кубики, и надеяться на удачу в таком важном вопросе как развитие персонажа. Отсутствие уровневого деления и большое количество умений позволяет эффективно взаимодействовать персонажам с различным игровым опытом.</li>
+<li>Отказавшись от процентного расчета мастерства в умениях, мы получили возможность оставить занудную прокачку скиллов в прошлом. Персонаж "качается" сам по себе, не требуя от игрока рутинных действий.</li>
+<li>Погода в мире меняется по своим законам, влияет на магию и во многом определяет ее. Например, запустить фаербол под проливным дождем сложнее чем при ясной солнечной погоде.</li>
+<li>Рэндомно генерируемый лут (в стиле дьябло), таблицы дропа.</li>
+<li>Добыча ресурсов и крафт.</li>
+</ul><h3>
+<a name="%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B"><span class="octicon octicon-link"></span></a>Ход работы</h3>
+
+<p>Идет работа над версией <strong>v0.1.1</strong> | <a href="https://github.com/Rottenwood/UtopiaMud/issues?milestone=1">задачи оставшиеся до релиза</a></p>
+
+<h3>
+<a name="%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB" class="anchor" href="#%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB"><span class="octicon octicon-link"></span></a>Функционал</h3>
+
+<ul>
+<li>Языковые настройки вынесены в отдельный файл, позволяя перевести команды и любой отображаемый текст на другой язык.</li>
+<li>Автоопределение сокращенных команд. Игрок может как угодно сократить команду, в то время как сервер поймет ее. При этом реализована возможность некоторым командам не сокращаться (например "quit").</li>
+<li>Фоновая перезагрузка, практически моментальная и без необходимости переподключения.</li>
+</ul><h3>
+<a name="%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D1%8B" class="anchor" href="#%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D1%8B"><span class="octicon octicon-link"></span></a>Конфигурационные файлы</h3>
+
+<ul>
+<li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml">Команды</a></li>
+<li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/races/races.yml">Расы</a></li>
+<li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml">Список зон</a></li>
+<li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml">Пример зоны "Средневековый город"</a></li>
+<li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml">Типы комнат</a></li>
+</ul><h3>
+<a name="%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8" class="anchor" href="#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8"><span class="octicon octicon-link"></span></a>Настройки</h3>
+
+<p><em>В данном разделе будут собираться и описываться необходимые пользовательские настройки [on/off]</em></p>
+
+<ul>
+<li>Отображение введенных команд</li>
+<li>Выбор цвета для всех элементов, цветовые схемы.</li>
+<li>Размер и тип шрифта</li>
+<li>включение/отключение графики (например, изображение персонажа при взгляде на него)</li>
+</ul>
         </section>
 
         <aside id="sidebar">
