--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Утопия</h1>
         <h2>Современный веб-движок для MUD</h2>
-        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>Исходный код проекта на</small>GitHub</a>
       </div>
     </header>
 
@@ -38,8 +38,6 @@
 <h4>
 <a name="%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud" class="anchor" href="#%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud"><span class="octicon octicon-link"></span></a>Рабочая версия муда: <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
 </h4>
-
-<p>Аналитика: <a href="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827"><img src="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827/mini.png" alt="SensioLabsInsight"></a> <a href="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/?branch=master"><img src="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/badges/quality-score.png?b=master" alt="Scrutinizer Code Quality"></a></p>
 
 <p><a href="https://github.com/Rottenwood/UtopiaMud/issues?labels=%D0%9E%D0%B1%D1%81%D1%83%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%0A%D0%B5&amp;page=1&amp;state=open">Форум</a>
 | <a href="https://github.com/Rottenwood/UtopiaMud/wiki">Wiki</a>
