--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Утопия</h1>
         <h2>Современный веб-движок для MUD</h2>
-        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>Исходный код проекта на</small>GitHub</a>
+        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>Исходный код на</small>GitHub</a>
       </div>
     </header>
 
