--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
 <p><strong>Утопия</strong>, в свою очередь, являются программным решением на языке PHP для создания муд-миров. Основной упор делается на простоту настройки. Легкая установка позволит любому желающему начать создавать свое виртуальное пространство, в то время как система интеграции позволит объединять пользовательские миры в единую вселенную.</p>
 
-<center>
+<center><h2>
 <a name="%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud" class="anchor" href="#%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud"><span class="octicon octicon-link"></span></a>Рабочая версия муда: <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
+
+  </h2>
 </center>
 <h3>
 <a name="%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F"><span class="octicon octicon-link"></span></a>Документация</h3>
