--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <center><h1>
 <a name="%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud" class="anchor" href="#%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud"><span class="octicon octicon-link"></span></a>
-Движок в действии (работающий муд):<br> <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
+Движок в действии:<br> <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
 
   </h1>
 </center>
