--- a/index.html
+++ b/index.html
@@ -5,24 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-53236941-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
     <title>Утопия by Rottenwood</title>
   </head>
@@ -32,17 +21,21 @@
       <div class="inner">
         <h1>Утопия</h1>
         <h2>Современный веб-движок для MUD</h2>
-        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>Исходный код на</small>GitHub</a>
+        <a href="https://github.com/Rottenwood/UtopiaMud" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <h1>
+<a id="Утопия-" class="anchor" href="#%D0%A3%D1%82%D0%BE%D0%BF%D0%B8%D1%8F-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Утопия <img src="http://img.shields.io/badge/%D0%A2%D0%B5%D0%BA%D1%83%D1%89%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F%20UtopiaMud-%20v0.1.0%20-brightgreen.svg" alt="Текущая версия">
+</h1>
 
-<blockquote>
-<p>MUD (Multi User Dungeon) — текстовая многопользовательская компьютерная игра, в которой присутствуют элементы ролевой игры, приключений, боевой системы и обязательно чат, как правило разделённый на каналы. Традиционно для передачи сообщений используется протокол telnet.</p>
-</blockquote>
+<h2>
+<a id="Современный-веб-движок-для-mud" class="anchor" href="#%D0%A1%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9-%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B2%D0%B8%D0%B6%D0%BE%D0%BA-%D0%B4%D0%BB%D1%8F-mud" aria-hidden="true"><span class="octicon octicon-link"></span></a>Современный веб-движок для MUD</h2>
+
+<p>Аналитика: <a href="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827"><img src="https://insight.sensiolabs.com/projects/a6196715-eb57-4447-a423-71127f7ed827/mini.png" alt="SensioLabsInsight"></a> <a href="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/?branch=master"><img src="https://scrutinizer-ci.com/g/Rottenwood/UtopiaMud/badges/quality-score.png?b=master" alt="Scrutinizer Code Quality"></a></p>
 
 <p><a href="https://github.com/Rottenwood/UtopiaMud/issues?labels=%D0%9E%D0%B1%D1%81%D1%83%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%0A%D0%B5&amp;page=1&amp;state=open">Форум</a>
 | <a href="https://github.com/Rottenwood/UtopiaMud/wiki">Wiki</a>
@@ -50,21 +43,19 @@
 | <a href="https://github.com/Rottenwood/UtopiaMud/blob/master/FUTURE.md">Планы на будущее</a>
 | <a href="https://github.com/Rottenwood/UtopiaMud/blob/master/CHANGELOG.md">История версий</a></p>
 
+<blockquote>
+<p>MUD (Multi User Dungeon) — текстовая многопользовательская компьютерная игра, в которой присутствуют элементы ролевой игры, приключений, боевой системы и обязательно чат, как правило разделённый на каналы. Традиционно для передачи сообщений используется протокол telnet.</p>
+</blockquote>
+
 <p><strong>Утопия</strong>, в свою очередь, являются программным решением на языке PHP для создания муд-миров. Основной упор делается на простоту настройки. Легкая установка позволит любому желающему начать создавать свое виртуальное пространство, в то время как система интеграции позволит объединять пользовательские миры в единую вселенную.</p>
 
-<center><h1>
-<a name="%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud" class="anchor" href="#%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F-%D0%BC%D1%83%D0%B4%D0%B0-httputopiamlmud"><span class="octicon octicon-link"></span></a>
-Движок в действии:<br> <a href="http://utopia.ml/mud">http://utopia.ml/mud</a>
-
-  </h1>
-</center>
 <h3>
-<a name="%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F"><span class="octicon octicon-link"></span></a>Документация</h3>
+<a id="Документация" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>Документация</h3>
 
 <p><a href="https://github.com/Rottenwood/UtopiaMud/wiki/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0">Описание процесса установки</a></p>
 
 <h3>
-<a name="%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8" class="anchor" href="#%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8"><span class="octicon octicon-link"></span></a>Особенности</h3>
+<a id="Особенности" class="anchor" href="#%D0%9E%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Особенности</h3>
 
 <ul>
 <li>Игра происходит через браузер, а не через telnet-клиент.</li>
@@ -78,20 +69,24 @@
 <li>Погода в мире меняется по своим законам, влияет на магию и во многом определяет ее. Например, запустить фаербол под проливным дождем сложнее чем при ясной солнечной погоде.</li>
 <li>Рэндомно генерируемый лут (в стиле дьябло), таблицы дропа.</li>
 <li>Добыча ресурсов и крафт.</li>
-</ul><h3>
-<a name="%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B"><span class="octicon octicon-link"></span></a>Ход работы</h3>
+</ul>
+
+<h3>
+<a id="Ход-работы" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ход работы</h3>
 
 <p>Идет работа над версией <strong>v0.1.1</strong> | <a href="https://github.com/Rottenwood/UtopiaMud/issues?milestone=1">задачи оставшиеся до релиза</a></p>
 
 <h3>
-<a name="%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB" class="anchor" href="#%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB"><span class="octicon octicon-link"></span></a>Функционал</h3>
+<a id="Функционал" class="anchor" href="#%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>Функционал</h3>
 
 <ul>
 <li>Языковые настройки вынесены в отдельный файл, позволяя перевести команды и любой отображаемый текст на другой язык.</li>
 <li>Автоопределение сокращенных команд. Игрок может как угодно сократить команду, в то время как сервер поймет ее. При этом реализована возможность некоторым командам не сокращаться (например "quit").</li>
 <li>Фоновая перезагрузка, практически моментальная и без необходимости переподключения.</li>
-</ul><h3>
-<a name="%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D1%8B" class="anchor" href="#%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D1%8B"><span class="octicon octicon-link"></span></a>Конфигурационные файлы</h3>
+</ul>
+
+<h3>
+<a id="Конфигурационные-файлы" class="anchor" href="#%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Конфигурационные файлы</h3>
 
 <ul>
 <li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml">Команды</a></li>
@@ -99,8 +94,10 @@
 <li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml">Список зон</a></li>
 <li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml">Пример зоны "Средневековый город"</a></li>
 <li><a href="https://github.com/Rottenwood/UtopiaMud/blob/master/src/Rottenwood/UtopiaMudBundle/Resources/types/roomtypes.yml">Типы комнат</a></li>
-</ul><h3>
-<a name="%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8" class="anchor" href="#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8"><span class="octicon octicon-link"></span></a>Настройки</h3>
+</ul>
+
+<h3>
+<a id="Настройки" class="anchor" href="#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Настройки</h3>
 
 <p><em>В данном разделе будут собираться и описываться необходимые пользовательские настройки [on/off]</em></p>
 
