--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 <p><strong>Утопия</strong>, в свою очередь, являются программным решением на языке PHP для создания муд-миров. Основной упор делается на простоту настройки. Легкая установка позволит любому желающему начать создавать свое виртуальное пространство, в то время как система интеграции позволит объединять пользовательские миры в единую вселенную.</p>
 
 <h3>
+<a id="Ход-работы" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ход работы</h3>
+
+<p>Работа над проектом преостановлена на неопределенный срок.</p>
+
+<h3>
 <a id="Документация" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>Документация</h3>
 
 <p><a href="https://github.com/Rottenwood/UtopiaMud/wiki/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0">Описание процесса установки</a></p>
@@ -70,11 +75,6 @@
 <li>Рэндомно генерируемый лут (в стиле дьябло), таблицы дропа.</li>
 <li>Добыча ресурсов и крафт.</li>
 </ul>
-
-<h3>
-<a id="Ход-работы" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ход работы</h3>
-
-<p>Идет работа над версией <strong>v0.1.1</strong> | <a href="https://github.com/Rottenwood/UtopiaMud/issues?milestone=1">задачи оставшиеся до релиза</a></p>
 
 <h3>
 <a id="Функционал" class="anchor" href="#%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>Функционал</h3>
