Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h3>
 <a id="Ход-работы" class="anchor" href="#%D0%A5%D0%BE%D0%B4-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ход работы</h3>
 
-<p>Работа над проектом преостановлена на неопределенный срок.</p>
+<p>Работа над проектом приостановлена на неопределенный срок.</p>
 
 <h3>
 <a id="Документация" class="anchor" href="#%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>Документация</h3>
